# 3ds_Max_Plugin_glTf

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  dev_install.bat  dev_install.ps1  export_test.ms  find3dsMaxSDK.lua  generate3dsMaxStuffs.ps1  tell-3ds-max.ps1  xmake.lua
App/: 3ds_Max_Plugin_glTf.def  CMakeLists.txt
App/Resource/: Default.rc  resource.h
App/Source/fant/: 3ds_Max_Plugin_glTf.cpp  glTF.cpp  glTF.h
App/Source/fant/3ds_Max_classes/: exporter.cpp  exporter.h  exporter_ui.cpp  exporter_ui.h  exporter_visitor.animation.cpp  exporter_visitor.cpp  exporter_visitor.h  exporter_visitor.material.cpp  exporter_visitor.mesh.cpp  exporter_visitor.node.cpp  exporter_visitor.skin.cpp  exporter_visitor.texture.cpp
App/Source/fant/3ds_Max_classes/exporter/: export_settings.h  glTF_creator.h  vertex_list.h
App/Source/fant/support/: to_u8string.h  u8charconv.h  uri_utility.cpp  uri_utility.h
App/Source/fant/support/win32/: get_string_resource.cpp  get_string_resource.h  instance.cpp  instance.h  mchar_to_utf8.cpp  mchar_to_utf8.h
App/Source/tapu/: 3ds_Max_Plugin_glTf.cpp
App/Source/tapu/3ds_Max_classes/: exporter.cpp  exporter.h
App/Source/tapu/3ds_Max_classes/exporter/: export_settings.h  glTF_creator.h  vertex_list.h
App/Source/tapu/support/win32/: get_string_resource.cpp  get_string_resource.h  instance.cpp  instance.h  mchar_to_utf8.cpp  mchar_to_utf8.h
Apricot/: CMakeLists.txt
Apricot.Ui/: Apricot.Ui.csproj  ExportDialog.cs
Apricot.Ui/Static/ExportDialog/: index.html
Apricot.Ui/Static/ExportDialog/i18n/: en.json  zh.json
Apricot.Ui/test/: test.ps1
Apricot/Source/apricot/: api-exports.h  exporter.cpp  exporter.h  glTF.cpp  glTF.h
Apricot/Source/apricot/exporter/: ExporterDialog.ms  export_settings.h  exporter.impl.animation.cpp  exporter.impl.cpp  exporter.impl.h  exporter.impl.material.cpp  exporter.impl.mesh.cpp  exporter.impl.node.cpp  exporter.impl.skin.cpp  exporter.impl.texture.cpp  ui.cpp  ui.h
Apricot/Source/apricot/utilities/: to_u8string.h  u8charconv.h  uri_utility.cpp  uri_utility.h
Apricot/Source/apricot/utilities/max/: mchar-to-u8.cpp  mchar-to-u8.h
Plugin/: 3ds_Max_Plugin_glTF.def  CMakeLists.txt
Plugin/Resource/: Default.rc  veroverrides.h
Plugin/Source/glTF_plugin/: exporter.cpp  exporter.h  main.cpp
Plugin/Source/glTF_plugin/utilities/win32/: get_string_resource.cpp  get_string_resource.h  instance.cpp  instance.h
Plugin/Static/: export-dialog.html  preview.ps1
